--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
     <section id="welcome" class="grid">
         <div class="welcome-text">
             <h2>Space Enthusiast<br>& Java Script Developer</h2>
-            <p class="leading">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur temporibus repellendus
-                voluptas laborum repellat placeat exercitationem excepturi, consequatur ratione repudiandae. Expedita
-                eum voluptas ut dicta ad temporibus cupiditate impedit pariatur!</p>
+            <p class="leading">Lorem ipsum dolor sit, impedit pariatur!</p>
             <a href="#portfolio" class="button">View my work</a>
         </div>
         <div class="welcome-img">
@@ -33,7 +31,7 @@
         </div>
     </section>
 
-    <section id="portfolio" class="grid">
+    <section id="portfolio">
         <h3>Some of my Projects</h3>
         <div class="projects grid">
             <a href="#">
@@ -67,10 +65,9 @@
                 <h4>Flutter</h4>
             </li>
         </ul>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit cumque id quaerat obcaecati, voluptatem, optio
-            similique quo maiores eos fugiat nam repellendus possimus quae, molestiae blanditiis placeat aut libero
-            dolor.</p>
+        
     </section>
+
     <section id="contact">
         <h3>Get In Touch</h3>
         <p class="leading">Lorem ipsum door sit amet consectetur</p>
